Fix font flickering

--- a/_sass/card.scss
+++ b/_sass/card.scss
@@ -7,6 +7,8 @@
   right: 0;
   opacity: 0;
   transition: opacity 0.3s;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
 }
 .card img {
   transition: transform 0.3s;
